src/objects/Product_Sale__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&quot;Clinic Use&quot;), 0, Product__r.Retail_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <label>Confirmed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Confirmed_By</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Amount__c</fullName>
        <formula>IF(IsPickVal(Type__c,&quot;Clinic Use&quot;), 0, Amount__c -  Discount__c - Product__r.Commission__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Product Sales</relationshipLabel>
        <relationshipName>Product_Sales</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff</label>
        <referenceTo>Staff__c</referenceTo>
        <relationshipLabel>Product Sales</relationshipLabel>
        <relationshipName>Product_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sale</fullName>
                    <default>true</default>
                    <label>Sale</label>
                </value>
                <value>
                    <fullName>Clinic Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Sale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Date__c</columns>
        <columns>Discount__c</columns>
        <columns>Final_Amount__c</columns>
        <columns>Product__c</columns>
        <columns>Type__c</columns>
        <columns>Confirmed_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS - {0000000}</displayFormat>
        <label>Product Sale ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>